<resources>
    <string-array name="shipmentPlans">
        <item>INSTANT</item>
        <item>SAME DAY</item>
        <item>NEXT DAY</item>
        <item>REGULER</item>
        <item>KARGO</item>
    </string-array>

    <string-array name="categories">
        <item>BOOK</item>
        <item>KITCHEN</item>
        <item>ELECTRONIC</item>
        <item>FASHION</item>
        <item>GAMING</item>
        <item>GADGET</item>
        <item>MOTHERCARE</item>
        <item>COSMETICS</item>
        <item>HEALTHCARE</item>
        <item>FURNITURE</item>
        <item>JEWELRY</item>
        <item>TOYS</item>
        <item>FNB</item>
        <item>STATIONERY</item>
        <item>SPORTS</item>
        <item>AUTOMOTIVE</item>
        <item>PETCARE</item>
        <item>ART_CRAFT</item>
        <item>CARPENTRY</item>
        <item>MISCELLANEOUS</item>
        <item>PROPERTY</item>
        <item>TRAVEL</item>
        <item>WEDDING</item>
    </string-array>

    <string name="app_name">jmart-android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="go">Go</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="to">to</string>
    <string name="used">Used</string>
    <string name="product_category">Product Category</string>
    <string name="account_details">Account Details</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_n_register_now">Don\'t Have Account?\n Register Now!</string>
    <string name="balance">Balance</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_product">Create Product</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="newtext">New</string>
    <string name="category">Category</string>
    <string name="shipment_plan">Shipment Plan</string>
    <string name="create">Create</string>
    <string name="product_details">Product Details</string>
    <string name="ShipmentPlan">Shipment Plan</string>
    <string name="conditionused">Condition Used</string>
    <string name="jumlah_pembelian">Jumlah pembelian</string>
    <string name="cancel">Cancel</string>
    <string name="purchase">Purchase</string>
    <string name="total_price">Total Price</string>
    <string name="qty">Qty</string>
    <string name="id_number">ID #NUMBER</string>
    <string name="order_id_nomer">Order ID #NOMER</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="cost">Cost</string>
    <string name="accept">Accept</string>

</resources>