<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:background="@drawable/shaping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </LinearLayout>

        <TextView
            android:id="@+id/invoiceOrderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/order_id_nomer"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/invoiceName"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            tools:text="@string/name"
            android:textSize="20sp"
            android:layout_weight="3"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/invoiceStatus"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            tools:text="@string/status"
            android:textSize="20sp"
            android:layout_weight="3"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/invoiceDate"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            tools:text="@string/date"
            android:textSize="20sp"
            android:layout_weight="3"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/invoiceAddress"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            tools:text="@string/address"
            android:textSize="20sp"
            android:layout_weight="3"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:gravity="right"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:id="@+id/invoiceCost"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            tools:text="@string/cost"
            android:textSize="20sp"
            android:layout_weight="3"
            android:layout_marginBottom="10dp"/>




    </LinearLayout>


</androidx.cardview.widget.CardView>