<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:id="@+id/storeinvoiceCardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shaping"
        android:orientation="vertical">

        <TextView
            android:id="@+id/invoiceStoreOrderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/order_id_nomer"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/invoiceStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/invoiceStoreStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/status" />

        <TextView
            android:id="@+id/invoiceStoreDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/invoiceStoreAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/address" />

        <TextView
            android:id="@+id/invoiceStoreCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/cost" />

        <LinearLayout
            android:id="@+id/storebuttonslayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/accept"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/cancel"
                android:textColor="@color/black" />

        </LinearLayout>

            <Button
                android:id="@+id/receiptButton"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="Input Receipt"
                android:textColor="@color/black" />


    </LinearLayout>


</androidx.cardview.widget.CardView>