<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductsFragment"
    android:background="@drawable/pattern">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/prev"
            android:layout_width="80dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/prev"
            android:backgroundTint="@android:color/darker_gray"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/next"
            android:layout_width="80dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_margin="10dp"
            android:text="@string/next"/>

        <EditText
            android:id="@+id/editPage"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/go"
            android:layout_width="80dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/go"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listViewProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>